--- a/matching_days.css
+++ b/matching_days.css
@@ -1,6 +1,7 @@
 body {
     margin: auto;
     background-image: url(http://wallpaper-gallery.net/images/cool-video-game-wallpapers/cool-video-game-wallpapers-0.jpg);
+    background-size: cover;
 }
 
 h1 {
@@ -11,6 +12,7 @@ h1 {
 table, td {
     border-collapse: collapse;
     border: 5px double lime;
+    font-size: 20px;
 }
 
 table {
@@ -33,6 +35,15 @@ td {
     background-color: lightblue;
 }
 
+.clearButton{
+    border: double;
+    border-width: thick;
+    border-color: dodgerblue;
+    border-radius: 15%;
+    width: auto;
+    background-color: lightblue;
+}
+
 .match {
     background-color: limegreen;
 }
@@ -46,5 +57,5 @@ td {
 }
 
 .dateInput {
-    color: lime;
+  font-size: 20px;
 }
